optimized: the image background for dark mode | fix: the margin for footer and width for pop up

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,5 +44,5 @@ body {
 }
 
 html.dark body {
-  background-image: url("../images/backgrounds/backgroundDark.png");
+  background-image: url("../images/backgrounds/backgroundDark.webp");
 }
